data/all_generated_tests/raw_wast_tests/unreachable_InfiniteLoops_1179.wast
;; 10. **Test Description:**    - Create a `loop` with a `call_indirect` instruction pointing to `unreachable`. This tests if indirectly called traps behave the same within loops.    - Constraint: Confirms `unreachable` behavior with indirect function calls within loops.    - Infinite Loop Relation: Ensures indirect traps prevent the loop from running indefinitely.

(assert_invalid
  (module
    (func $type-unreachable-indirect-call-in-loop
      (loop 
        (call_indirect (type $t) (unreachable))
      )
    )
    (type $t (func))
  )
  "type mismatch"
)